add download chem graph

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -611,6 +611,9 @@
                         <div class="card-header-title pull-left d-inbar">
                             Chemical Records
                         </div>
+                        <button class="ssdd-export btn btn-default pull-right" id="chem-graph-export">
+                            <i class="fa fa-download"></i>
+                        </button>
                     </div>
                     <div class="card-body">
                         <div class="col-12 fish-ssdd-chem-bar-chart" id="fish-ssdd-chem-bar-chart">
