Show site images

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -441,8 +441,29 @@
 
             </div>
             {# end of col-lg-4 #}
-
             <div class="col-lg-8">
+
+                {# Site image #}
+                <div class="card" id="ssdd-carousel-wrapper" style="display: none;">
+                    <div class="card-body">
+                        <div id="ssdd-site-image-carousel" class="carousel slide" data-ride="carousel">
+                            <!-- Indicators -->
+                            <ul class="carousel-indicators">
+                            </ul>
+                            <!-- The slideshow -->
+                            <div class="carousel-inner">
+                            </div>
+                            <!-- Left and right controls -->
+                            <a class="carousel-control-prev" href="#ssdd-site-image-carousel" data-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </a>
+                            <a class="carousel-control-next" href="#ssdd-site-image-carousel" data-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                 {# Data Summary #}
                 <div class="card" id="fish-ssdd-data-summary">
                     <div class="card-header">
