update graph and add csv download for chemical records (#1651)
* update graph and add csv download for chemical records

* clean code

* Update background colour

Co-Authored-By: Dimas Ciputra <dimas.ciputra@gmail.com>

* Update border colour

Co-Authored-By: Dimas Ciputra <dimas.ciputra@gmail.com>

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -639,6 +639,11 @@
                     <div class="card-body">
                         <div class="col-12 fish-ssdd-chem-bar-chart" id="fish-ssdd-chem-bar-chart">
                         </div>
+                        <div class="container">
+                            <button class="btn btn-info download-chem-csv"
+                                    style="width: 100%;">Download as CSV
+                            </button>
+                        </div>
                     </div>
                 </div>
 
