Search from url for abiotic data

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -56,7 +56,7 @@
                     <button class="apply-filter"><i class="fa fa-check"
                                                     aria-hidden="true"></i> Apply
                     </button>
-                    <button class="clear-filter"><i class="fa fa-times"
+                    <button class="clear-filter clear-filter-module"><i class="fa fa-times"
                                                     aria-hidden="true"></i> Clear
                     </button>
                 </div>
