--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -62,6 +62,7 @@
                 <div class="form-group row">
                     <div class="col-lg-12">
                         <a href="/fish-form/?siteId={{ site_id }}" class="btn btn-info">Add Fish</a>
+                        <a href="/invert-form/?siteId={{ site_id }}" class="btn btn-info">Add Invert</a>
                         <a href="/sass/{{ site_id }}/" class="btn btn-info">Add SASS</a>
                     </div>
                 </div>
