Rename chemical records to abiotic data

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -630,7 +630,7 @@
                 <div class="card" id="ssdd-chem-chart-wrapper">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inbar">
-                            Chemical Records
+                            Abiotic Data
                         </div>
                         <button class="ssdd-export btn btn-default pull-right" id="chem-graph-export">
                             <i class="fa fa-download"></i>
