--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -613,19 +613,6 @@
                     </div>
                 </div>
 
-                {# Metadata table #}
-                <div class="card" id="ssdd-metadata-table">
-                    <div class="card-header">
-                        <div class="card-header-title pull-left d-inline">
-                            Metadata Table
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <table id="metadata-table-list" class="table table-hover custom-table">
-                        </table>
-                    </div>
-                </div>
-
                 {# chemical records bar chart #}
                 <div class="card" id="ssdd-chem-chart-wrapper">
                     <div class="card-header">
@@ -647,6 +634,24 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="col-lg-12">
+                {# Metadata table #}
+                <div class="card" id="ssdd-metadata-table">
+                    <div class="card-header">
+                        <div class="card-header-title pull-left d-inline">
+                            Metadata Table
+                        </div>
+                        <button class="ssdd-export btn btn-default pull-right"
+                                data-datac="metadata-table-list">
+                            <i class="fa fa-download"></i>
+                        </button>
+                    </div>
+                    <div class="card-body">
+                        <table id="metadata-table-list" class="table table-hover custom-table">
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
