--- a/bims/templates/collections_form_page.html
+++ b/bims/templates/collections_form_page.html
@@ -230,7 +230,7 @@
             </div>
             <div class="form-group row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label">Image</label>
+                       class="col-sm-2 col-form-label col-form-label">Site Image</label>
                 <div class="col-sm-10">
                     <div class="form-group">
                         <div class="input-group input-file">
@@ -359,6 +359,6 @@
     <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
     <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/non_requirejs/fish_form.js" %}"></script>
+    <script src="{% static "js/non_requirejs/collection_form.js" %}"></script>
 
 {% endblock %}
