--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -79,6 +79,14 @@
                             <%= total_sites %>
                         </td>
                     </tr>
+                    <tr class="species-detail-row">
+                        <td class="species-detail-cell cell-header">
+                            Taxon Rank
+                        </td>
+                        <td class="species-detail-cell cell-content">
+                            <%= rank %>
+                        </td>
+                    </tr>
                 </table>
             </div>
             <div id="species-detail-summary-origin">
