fix validation for source reference form

--- a/bims/templates/source_references/new_database_record_modal.html
+++ b/bims/templates/source_references/new_database_record_modal.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" onclick="$('.alert').hide()">Close</button>
                     <button id="new-database-record-upload" type="button" class="btn btn-primary">Create</button>
                 </div>
             </form>
