--- a/bims/templates/source_references/new_document_modal.html
+++ b/bims/templates/source_references/new_document_modal.html
@@ -75,7 +75,7 @@
                     <input type="hidden" name="permissions" value='{"users":{"AnonymousUser":["view_resourcebase","download_resourcebase"]},"groups":{}}' id="permissions">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" onclick="$('.alert').hide()">Close</button>
                     <button id="new-document-upload" type="button" class="btn btn-primary">
                         <img src="/static/img/small-loading.svg" width="25"
                             alt="Loading view" style="display: none;">
