--- a/bims/templates/source_references/source_reference_page.html
+++ b/bims/templates/source_references/source_reference_page.html
@@ -123,7 +123,7 @@
                     Source reference for records
                 </div>
                 <br> <br>
-                <div class="alert alert-danger" role="alert"
+                <div id="form-alert" class="alert alert-danger" role="alert"
                      style="display: none;">
                 </div>
                 <div class="form-group row">
