show commit and branch in landing page

--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -284,3 +284,14 @@ h6 {
         max-width: 550px;
     }
 }
+
+.git-info {
+    font-size: 10pt;
+    margin-top: 10px;
+    color: darkgrey;
+}
+
+.git-item {
+    color: whitesmoke;
+    margin-left: 5px;
+}
