--- a/bims/templates/source_references/source_reference_page.html
+++ b/bims/templates/source_references/source_reference_page.html
@@ -123,14 +123,14 @@
                     Source reference for records
                 </div>
                 <br> <br>
-                <div class="alert alert-danger" role="alert"
+                <div id="form-alert" class="alert alert-danger" role="alert"
                      style="display: none;">
                 </div>
                 <div class="form-group row">
                     <label for="reference-category"
                            class="col-sm-2 col-form-label col-form-label"><b>Reference Category</b></label>
                     <div class="col-sm-10">
-                        <select id="reference-category" class="form-control" name="reference_category">
+                        <select id="reference-category" class="form-control" name="reference_category" onchange="$('.alert').hide(); $('.error').hide()">
                             <option value=""> Not specified</option>
                             <option value="database"> Database</option>
                             <option value="bibliography"> Peer-reviewed scientific article</option>
