--- a/bims/templates/account/password_reset_from_key.html
+++ b/bims/templates/account/password_reset_from_key.html
@@ -42,7 +42,16 @@
                         <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.
                             Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
                     {% else %}
-                         {% if form %}
+                        {% if form %}
+                            <div class="alert alert-info password-message" role="alert">
+                                Password must contain at least six characters, including:
+                                <ul>
+                                    <li>lower case letter</li>
+                                    <li>upper case letter</li>
+                                    <li>numeric character</li>
+                                </ul>
+                                <br/>
+                            </div>
                             <form method="POST" action=".">
                                 {% csrf_token %}
                                 {{ form.as_p }}
