--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -137,7 +137,7 @@
         {% if use_ecological_condition %}
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
-                    ECOLOGICAL CATEGORY <i
+                    ECOLOGICAL CATEGORY (SASS) <i
                         class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
@@ -176,7 +176,7 @@
 
           <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
-                ORIGIN <i
+                ORIGIN AND ENDEMISM<i
                     class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
                     class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
