--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -30,6 +30,7 @@
                 Refine your search by using the filters below.
             </div>
         </div>
+
         <div class="row">
             <div class="col-lg-12 map-filter-title">
                 FILTERS
@@ -332,6 +333,14 @@
         <div class="row">
             <div class="search-box">
             </div>
+        </div>
+        <div class="row sortby-wrapper form-group">
+            <select class="form-control" id="sortby-select">
+                <option value="name">Name : Ascending</option>
+                <option value="-name">Name : Descending</option>
+                <option value="-total">Occurrences : High to low</option>
+                <option value="total">Occurrences : Low to high</option>
+            </select>
         </div>
         <div class="row" style="margin-top: 10px; margin-bottom: 12px">
             <div class="col-lg-12 search-info">
