--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -80,22 +80,36 @@
                     </div>
                     <div class="vertical-space"></div>
                     <div class="table-container">
-                        <table class="sass-summary table table-striped">
+                        <table class="sass-summary table">
                             <tbody>
                             <tr>
-                                <th scope="row">FBIS Site Code</th>
+                                <th class="title-row" colspan="2">Site Details</th>
+                            </tr>
+                            <tr>
+                                <td scope="row">FBIS Site Code</td>
                                 <td>{{ site_code }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">Site coordinates</th>
+                                <td scope="row">Original Site Code</td>
+                                <td>{{ original_site_code }}</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Site coordinates</td>
                                 <td>{{ coord.0 }}, {{ coord.1 }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">Site description</th>
+                                <td scope="row">Site description</td>
                                 <td>{{ site_description }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">River</th>
+                                <th class="title-row" colspan="2">River and Geomorphological Zone</th>
+                            </tr>
+                            <tr>
+                                <td scope="row">Original River Name</td>
+                                <td>{{ original_river_name }}</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">River</td>
                                 <td>{{ river }}</td>
                             </tr>
                             </tbody>
@@ -103,7 +117,7 @@
                     </div>
                     <div class="vertical-space"></div>
                     <div class="table-container">
-                        <table class="sass-info table table-striped">
+                        <table class="sass-info table">
                             <tbody>
                             <tr>
                                 <th scope="row">Number of SASS records</th>
@@ -315,22 +329,36 @@
                     <div class="map-container" id="map"></div>
                     <div class="vertical-space"></div>
                     <div class="table-container">
-                        <table class="sass-info table table-striped">
+                        <table class="sass-info table">
                             <tbody>
                             <tr>
-                                <th scope="row">FBIS Site Code</th>
+                                <th class="title-row" colspan="2">Site Details</th>
+                            </tr>
+                            <tr>
+                                <td scope="row">FBIS Site Code</td>
                                 <td>{{ site_code }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">Site coordinates</th>
+                                <td scope="row">Original Site Code</td>
+                                <td>{{ original_site_code }}</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Site coordinates</td>
                                 <td>{{ coord.0 }}, {{ coord.1 }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">Site description</th>
+                                <td scope="row">Site description</td>
                                 <td>{{ site_description }}</td>
                             </tr>
                             <tr>
-                                <th scope="row">River</th>
+                                <th class="title-row" colspan="2">River and Geomorphological Zone</th>
+                            </tr>
+                            <tr>
+                                <td scope="row">Original River Name</td>
+                                <td>{{ original_river_name }}</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">River</td>
                                 <td>{{ river }}</td>
                             </tr>
                             </tbody>
