--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -478,42 +478,56 @@
                     <div class="card-body">
                         <div id="data-summary">
                             <div class="row fish-ssdd-legends">
-                                <div class="col-3 fish-ssdd-legend"
+                                <div class="col-1"></div>
+                                <div class="col-2 fish-ssdd-legend"
                                      id="fish-ssdd-origin-legend"></div>
-                                <div class="col-3 fish-ssdd-legend"
+                                <div class="col-2 fish-ssdd-legend"
                                      id="fish-ssdd-endemism-legend"></div>
-                                <div class="col-3 fish-ssdd-legend"
+                                <div class="col-2 fish-ssdd-legend"
                                      id="fish-ssdd-cons_status-legend"></div>
-                                <div class="col-3 fish-ssdd-legend"
+                                <div class="col-2 fish-ssdd-legend"
                                      id="fish-ssdd-sampling_method-legend"></div>
+                                <div class="col-2 fish-ssdd-legend"
+                                     id="fish-ssdd-biotope-legend"></div>
+                                <div class="col-1"></div>
                             </div>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-1"></div>
+                                <div class="col-2 col-chart">
                                     <canvas id="fish-ssdd-origin-pie"></canvas>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-2 col-chart">
                                     <canvas id="fish-ssdd-endemism-pie"></canvas>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-2 col-chart">
                                     <canvas id="fish-ssdd-conservation-status-pie"></canvas>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-2 col-chart">
                                     <canvas id="fish-ssdd-sampling-method-pie"></canvas>
                                 </div>
+                                <div class="col-2 col-chart">
+                                    <canvas id="fish-ssdd-biotope-pie"></canvas>
+                                </div>
+                                <div class="col-1 col-chart"></div>
                             </div>
                             <div class="row">
-                                <div class="col-3 fish-ssdd-titles">
+                                <div class="col-1"></div>
+                                <div class="col-2 fish-ssdd-titles">
                                     Origin
                                 </div>
-                                <div class="col-3 fish-ssdd-titles">
+                                <div class="col-2 fish-ssdd-titles">
                                     Endemism
                                 </div>
-                                <div class="col-3 fish-ssdd-titles">
+                                <div class="col-2 fish-ssdd-titles">
                                     Conservation Status
                                 </div>
-                                <div class="col-3 fish-ssdd-titles">
+                                <div class="col-2 fish-ssdd-titles">
                                     Sampling Method
                                 </div>
+                                <div class="col-2 fish-ssdd-titles">
+                                    Biotope
+                                </div>
+                                <div class="col-1"></div>
                             </div>
                         </div>
                     </div>
