--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2497,7 +2497,7 @@ div:hover::-webkit-scrollbar {
     width: 100%;
 }
 
-#fish-ssdd-site-details .col-6 {
+#species-ssdd-site-details .col-6 {
     padding: 0.25rem;
     border: 1px solid #d3d4d1;
     padding-left: 0.5rem;
@@ -2505,41 +2505,41 @@ div:hover::-webkit-scrollbar {
     margin-bottom: -1px;
 }
 
-#fish-ssdd-site-details .col-12.sub-title {
+#species-ssdd-site-details .col-12.sub-title {
     padding: 0.25rem;
     border: 1px solid #d3d4d1;
     font-size: 12px;
     font-weight: 700;
 }
 
-#fish-ssdd-distribution {
+#species-ssdd-distribution {
     padding-bottom: 15px;
 }
 
-#fish-ssdd-site-details .title_column {
+#species-ssdd-site-details .title_column {
     font-weight: 700;
     margin-right: -1px;
 }
 
-#fish-ssdd-records-sites .col-6 {
+#species-ssdd-records-sites .col-6 {
     padding: 0.25rem;
     border: 1px solid #d3d4d1;
     padding-left: 0.5rem;
     font-size: 12px;
 }
 
-#fish-ssdd-records-sites .col-12.sub-title {
+#species-ssdd-records-sites .col-12.sub-title {
     padding: 0.25rem;
     border: 1px solid #d3d4d1;
     font-size: 12px;
     font-weight: 700;
 }
 
-#fish-ssdd-records-sites .title_column {
+#species-ssdd-records-sites .title_column {
     font-weight: 700;
 }
 
-#fish-ssdd-records-sites .col-6 {
+#species-ssdd-records-sites .col-6 {
     padding: 0.25rem;
     border: 1px solid #d3d4d1;
     padding-left: 0.5rem;
