--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -37,24 +37,17 @@
     <section id="about">
     <div class="container">
         <div class="row">
-            <div class="col-lg-10 pull-left kartoza-icon">
+            <div class="col-lg-8 pull-left kartoza-icon">
                 <a href="http://kartoza.com/en/">
                     <img src="{% static 'img/kartoza-logo-only.png' %}" style="width: 55px">
                 </a>
             </div>
-            {% if site_ready %}
-            <div class="col-lg-2 pull-right about-links">
-                <p><a href="/pages/aboutus/" style="text-decoration: none; color: white">About</a></p>
-                <p><a href="/contact/" style="text-decoration: none; color: white">Contact</a></p>
-                <p><a>Others</a></p>
-            </div>
+            {% if commit_id and branch_name and not tag_version%}
+                <div class="git-info">Commit: <a href="https://github.com/kartoza/django-bims/commit/{{ commit_id }}" target="_blank"> <span class="git-item">{{ commit_id }}</span></a></div>
+            {% elif tag_version %}
+                <div class="git-info">Version: <a href="https://github.com/kartoza/django-bims/releases/tag/{{ tag_version }}" target="_blank"><span class="git-item"> {{ tag_version }}</span></a></div>
             {% endif %}
         </div>
-    {% if commit_id and branch_name and not tag_version%}
-        <div class="row git-info">Checked out from commit: <span class="git-item">{{ commit_id }}</span>, branch: <span class="git-item">{{ branch_name }}</span></div>
-    {% elif tag_version %}
-        <div class="row git-info">Version: <span class="git-item"> {{ tag_version }}</span></div>
-    {% endif %}
     </div>
     </section>
     </div>
